--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ profile = "black"
 
 [tool.black]
 line-length = 119
-skip-string-normalization = true
+# skip-string-normalization = true
 
 [build-system]
 requires = ["poetry-core"]
