chore(licence-update): Add pyproject.toml for Custom Node Registry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "comfyui_tgate"
 description = "T-GATE plugin for ComfyUI"
 version = "0.1.0"
-license = "LICENSE"
+license = { file = "LICENSE" }
 
 [project.urls]
 Repository = "https://github.com/JettHu/ComfyUI_TGate"
